@startuml

class Client {
    - id: int
    - nom: String
    - adreça: String
    - telèfon: String
    - correuElectrònic: String
}
class UsuariWeb {
    - id: int
    - login: String
    - contrasenya: String
    - estat: String
}
class PaymentAccount {
    - id: int
    - client: Client
}
class ShoppingCart {
    - id: int
    - UsuariWeb: UsuariWeb
    - ítems: List<CartCompra>
}
class CartCompra {
    - id: int
    - producte: Producte
    - quantitat: int
    - preu: double
}
class Producte {
    - id: int
    - codi: String
    - nom: String
    - proveïdor: String
}
class Factura {
    - id: int
    - client: Client
    - adreçaFacturació: String
    - dataEmisió: Date
    - dataTancament: Date
    - pagament: Pagament
}
class Pagament {
    - id: int
    - import: double
}
class Comanda {
    - id: int
    - factura: Factura
    - dataComanda: Date
    - dataEnviament: Date
    - destinació: String
    - import: double
    - estat: String
}
Client "1" --> "0.." UsuariWeb
Client "1" --> "0.." PaymentAccount
UsuariWeb "0.." --> "0.." ShoppingCart
ShoppingCart "0.." --> "1" Factura
ShoppingCart "0.." --> "0.." CartCompra
CartCompra "1" --> "1" Producte
Factura "1" --> "1" Pagament
Factura "1" --> "0.." Comanda
Comanda "1" --> "0.." CartCompra

@enduml
